[project]
name = "trackio-mlflow"
version = "0.0.1"
description = "Trackio integration for MLflow tracking store."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
authors = [
    {name = "Yuchen Cheng", email = "rudeigerc@gmail.com"},
]
dependencies = [
    "mlflow>=2.0.0,<=2.22.1",
    "trackio>=0.2.2",
]

[project.entry-points."mlflow.tracking_store"]
trackio = "trackio_mlflow.store:TrackioStore"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
disable_error_code = [
    "abstract",
    "no-untyped-call",
    "import-untyped",
]

[tool.coverage.run]
parallel = true
source = [
    "src/trackio_mlflow",
    "tests",
]
